--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{font-family:Tahoma, Arial, Helvetica, sans-serif;text-decoration:none;color
 .view img{
 	width: 35%;
 }
-.rt>p{text-align: left;}
+.rt{text-align: left;}
 .ku{width:100%;}
 .ku img{width:100%;}
 .foncall a{text-decoration:none;}
