--- a/style.css
+++ b/style.css
@@ -2,13 +2,8 @@
 @font-face{font-family:akrobat-black;src:url(./fonts/Akrobat-Black.otf);}
 @font-face{font-family:akrobat-regular;src:url(./fonts/Akrobat-Regular.otf);}
 body{font-family:Tahoma, Arial, Helvetica, sans-serif;text-decoration:none;color:#000000;background-color:#ffffff;text-decoration-color:#000000;margin-top:0%;margin-bottom:0%;margin-left:0%;margin-right:0%;overflow-x:hidden;}
-.view a{color:rgb(39, 43, 47);text-decoration:none;}
-.view{text-align:center;font-family:akrobat-regular;color:rgb(39, 43, 47);font-size:32px;}
-.view img{
-	width: 35%;
-}
-.ku{width:100%;}
-.ku img{width:100%;}
+
+
 .foncall a{text-decoration:none;}
 .wroe{display:flex;flex-direction:row;align-items:center;justify-content:center;}
 .bli{flex:1;}
@@ -41,68 +36,30 @@ body{font-family:Tahoma, Arial, Helvetica, sans-serif;text-decoration:none;color
 .no{display:none;}
 .not{display:none;}
 .ot0 a{color:rgb(255, 90, 90);}
-.yt2v_mid{display:none;}
-.yt2v_big{display:none;}
+
 .m_v1280{display:none;}
-.comment_igor1{text-align:left;padding-left:19%;margin-bottom:3%;}
-.bigf{text-align:center;margin-bottom:-2%;}
-.comment_abitd{text-align:right;padding-right:10%;}
-.comment_abit{text-align:right;padding-right:12%;}
-.comment_igor{text-align:left;padding-left:19%;}
+
+
+
 .menu_vbig{display:none;}
 .m_vbig{display:none;}
 .tekst_vmob{display:none;}
-.osnov{display:none;}
+
 .knfooter{display:none;}
-.vkic{font-size:18px;}
-.fotk img{width:31px;}
+
+
 .otik{color:rgb(255, 90, 90);font-family:akrobat-bold;font-size:25px;text-decoration:none;}
 .kn a{color:white;}
-.tr14{font-size:17.5px;line-height:135%;padding-left:6%;padding-right:22%;}
-.tq14{background-image:url(./images/background/tr11.png);background-repeat:no-repeat;background-size:100%;width:100%;}
-.tqf2{float:left;width:4%;}
-.tqf2 img{height:80px;width:29px;}
-.tr13{font-size:18px;line-height:140%;padding-left:19%;padding-top:1%;padding-right:5%;padding-bottom:8%;}
-.tq13{background-image:url(./images/background/tr2.png);background-repeat:no-repeat;background-size:100%;width:100%;}
-.tr12{font-size:17px;line-height:140%;padding-top:2%;padding-left:6%;padding-right:23%;padding-bottom:5%;margin-top:-1%;}
-.tq12{background-image:url(./images/background/tr9.png);background-repeat:no-repeat;background-size:100%;width:100%;}
-.tr11{font-size:17px;line-height:140%;padding-left:19%;padding-right:5%;padding-bottom:5%;padding-top:1%;margin-top:-1%;}
-.tq11{background-image:url(./images/background/tr12.png);background-repeat:no-repeat;background-size:100%;width:100%;}
-.tr10{font-size:18px;padding-left:6%;padding-right:24%;line-height:126%;}
-.tq10{background-image:url(./images/background/tr7.png);background-repeat:no-repeat;background-size:100%;width:100%;}
-.tqf1{float:left;width:4%;}
-.tqf1 img{height:260px;width:29px;}
-.txx2{font-size:26px;margin-bottom:-5%;}
-.tr9{padding-left:19%;padding-right:7%;padding-top:3%;padding-bottom:7%;font-size:18px;margin-top:-1%;}
-.tq70{background-image:url(./images/background/tr13.png);background-repeat:no-repeat;background-size:100%;width:100%;}
-.txx1{font-size:24px;}
-.t0{font-size:40px;margin-bottom:1%;}
+
+
+
 .kn1{width:23%;background-image:url(./images/background/kn.png);background-repeat:no-repeat;background-size:100%;float:left;margin-right:2%;padding-top:1.5%;padding-bottom:2%;}
 .kn2{width:23%;float:left;background-image:url(./images/background/kn.png);background-repeat:no-repeat;background-size:100%;margin-right:2%;padding-top:1.5%;padding-bottom:2%;}
 .kn3{width:23%;float:left;background-image:url(./images/background/kn.png);background-repeat:no-repeat;background-size:100%;margin-right:2%;padding-top:1.5%;padding-bottom:2%;}
 .kn4{width:23%;float:left;background-image:url(./images/background/kn.png);background-repeat:no-repeat;background-size:100%;padding-top:1.5%;padding-bottom:3%;}
 .kn{text-align:center;margin-top:2%;width:100%;color:white;font-size:23px;font-family:akrobat-bold;}
-.tq1, .tq2, .tq3, .tq4{font-size:22px;color:rgb(39, 43, 47);}
-.tr5{line-height:140%;font-size:18px;padding-top:2%;padding-left:19%;padding-right:4%;padding-bottom:6%;margin-top:1%;}
-.tq9{width:100%;background-image:url(./images/background/tr2.png);background-repeat:no-repeat;background-size:100%;}
-.tr4{line-height:140%;font-size:18px;padding-left:6%;padding-right:23%;padding-bottom:6%;}
-.yt1{padding-left:6%;padding-top:2%;font-size:18px;padding-right:11%;}
-.yt2{padding-left:6%;padding-top:4%;font-size:18px;padding-right:13%;}
-.yt3{padding-left:6%;font-size:18px;padding-right:13%;padding-bottom:8%;}
-.yt4{padding-left:6%;font-size:18px;padding-right:13%;padding-top:3%;}
-.yt5{padding-left:6%;font-size:18px;padding-right:12%;padding-bottom:8%;}
-.tq8{width:100%;background-image:url(./images/background/tr5.png);background-repeat:no-repeat;background-size:100%;}
-.tr3{padding-right:23%;line-height:140%;font-size:18px;padding-left:6%;padding-top:2%;padding-bottom:5%;}
-.tq7{width:100%;background-image:url(./images/background/tr3.png);background-repeat:no-repeat;background-size:100%;margin-top:1%;}
-.tq40{width:100%;color:rgb(255, 90, 90);font-family:akrobat-bold;padding-bottom:2%;}
-.tr2{background-image:url(./images/background/tr2.png);background-repeat:no-repeat;background-size:100%;line-height:140%;font-size:17px;padding-left:19%;padding-right:5%;padding-top:1%;padding-bottom:7%;}
-.tr1{background-image:url(./images/background/tr1.png);background-repeat:no-repeat;background-size:100%;padding-left:6%;padding-right:23%;padding-bottom:7%;line-height:140%;padding-top:1%;font-size:18px;}
-.tq5{width:100%;}
-.tq4{width:100%;height:10%;}
-.tqf{float:left;width:4%;}
-.tqf img{height:180px;width:29px;}
-.tqt{width:100%;}
-.tq1, .tq2, .tq3, .tqt, .tr1, .tq6, .tq7, .tq8, .tq9, .tq70, .tq10, .tq11, .tq12, .tq13, .tq14{font-family:akrobat-regular;color:rgb(39, 43, 47);}
+
+
 .glf9{display:none;}
 .glf0{display:none;}
 .glf a{color:white;}
@@ -219,21 +176,14 @@ a:hover{text-decoration:none;background-color:white;}
 @media screen and (min-width:1800px){
 .pp{margin-left:-71px;}
 .not{display:block;}
-.tq6{margin-top:1%;}
-.pot{padding-top:1%;}
-.po{padding-top:1%;}
+
+
 #kovalenko{margin-bottom:-1%;}
-.tq40{padding-bottom:1%;}
+
 .pattern_vmest{display:block;}
-.tq70{margin-top:2%;}
+
 #simb{margin-top:2%;}
-.tq12{margin-top:1%;}
-.yt2v_norm{display:none;}
-.yt2v_big{display:block;}
-.tq13{background-image:url(./images/background/tr2--2.png);margin-top:1%;}
-.tq14{background-image:url(./images/background/tr11--11.png);}
-.tq10{background-image:url(./images/background/tr7--7.png);}
-.tq9{background-image:url(./images/background/tr2--2.png);margin-top:2%;}
+
 .karta{text-align:center;}
 .karta img{width:88%;}
 .googlem img{width:31%;}
@@ -247,42 +197,23 @@ a:hover{text-decoration:none;background-color:white;}
 .block4{margin-left:-1%;margin-right:19%;font-size:55px;}
 
 .menu a.blink{font-size:14px;padding-right:0px;text-align:center;}
-.tq7{margin-top:1%;}
+
 .menu_vmel{display:none;}
 .menu_vbig{display:block;}
 .m_vbig{display:block;}
 .g2{padding-bottom:1%;}
-.txx2{font-size:39px;}
-.fotk img{width:31px;}
-.txx1{font-size:39px;}
-.t0{font-size:55px;}
-.tq1, .tq2, .tq3, .tq4{font-size:30px;}
-.tr14{font-size:28px;}
-.tr13{font-size:28px;padding-bottom:5%;}
-.tr12{font-size:28px;padding-right:22%;padding-bottom:5%;padding-top:1.4%;}
-.tr11{font-size:28px;padding-bottom:5%;padding-right:6%;padding-top:1%;}
-.tyui{padding-top:2%;}
-.tr10{font-size:28px;}
-.tqf1 img{height:284px;}
-.tqf2 img{height:66px;}
-.tr5{font-size:28px;padding-bottom:7%;padding-right:6%;}
-.tr4{font-size:29px;padding-bottom:7%;}
-.tr9{font-size:28px;padding-right:9%;margin-top:-2%;}
-.yt1{font-size:28px;padding-right:15%;}
-.yt2{font-size:28px;padding-top:3%;}
-.yt3{padding-right:14%;font-size:28px;padding-bottom:8%;}
-.yt4{font-size:28px;}
-.yt5{font-size:28px;padding-bottom:8%;}
-.tr3{font-size:28px;padding-bottom:6%;}
-.tr2{font-size:28px;padding-bottom:6%;padding-top:1%;}
+
+
+
+
+
 .tyu{padding-bottom:3%;padding-top:2%;}
-.tr1{font-size:28px;padding-bottom:7%;background-image:url(./images/background/tr1--1.png);padding-top:2%;}
+
 .kn1{font-size:37px;padding-bottom:3%;}
 .kn2{font-size:37px;padding-bottom:3%;}
 .kn3{font-size:37px;padding-bottom:3%;}
 .kn4{font-size:37px;padding-bottom:3%;}
-.tqf img{height:251px;}
-.tqt{font-size:30px;}
+
 .glf{font-size:36px;}
 .glf1{margin-left:1%;}
 .glf2{margin-left:1%;}
@@ -308,39 +239,20 @@ a:hover{text-decoration:none;background-color:white;}
 .ot4{font-size:24px;}
 }
 @media screen and (max-width:1280px){
-.txx2{margin-bottom:-4%;}
+
 #simb{margin-top:2%;}
 #vasil{margin-top:1%;margin-bottom:1%;}
-.tq7{margin-top:1%;}
-.view img{width: 35%;}
-.yt2v_norm{display:none;}
-.yt2v_mid{display:block;}
-.tq9{background-image:url(./images/background/tr2--2.png);margin-top:2%;}
-.tq10{background-image:url(./images/background/tr7--7.png);}
-.tq13{background-image:url(./images/background/tr2--2.png);margin-top:1%;}
-.yt1{font-size:20px;padding-right:12%;}
+
+
+
 .block4{margin-right:22%;}
 .m_vbig{display:none;}
 .m_v1280{display:block;}
-.yt4{font-size:20px;}
-.yt5{font-size:20px;padding-bottom:8%;}
-.yt3{font-size:20px;padding-bottom:8%;}
-.yt2{font-size:20px;padding-top:2%;}
-.fotk img{width:33px;}
-.tr13{font-size:19px;padding-bottom:7%;}
-.tq1, .tq2, .tq3, .tq4{font-size:24px;}
-.tr9{font-size:19px;padding-top:4%;}
-.tr1{font-size:20px;background-image:url(./images/background/tr1--1.png);padding-top:3%;padding-bottom:6%;}
-.tr14{font-size:20px;}
-.tr12{font-size:20px;padding-bottom:6%;padding-top:1%;}
-.tr11{font-size:19px;padding-bottom:5%;padding-top:1%;}
-.tr10{font-size:20px;padding-right:22%;}
-.tqf1 img{height:289px;}
-.tr4{font-size:20px;padding-bottom:8%;}
-.tr3{font-size:20px;padding-bottom:6%;}
-.tr2{font-size:19px;padding-bottom:7%;}
-.tqf img{height:198px;}
-.tr5{font-size:19px;padding-right:6%;padding-top:3%;padding-bottom:7%;}
+
+
+
+
+
 .glf{display:none;}
 .glf1{width:19%;}
 .glf2{width:19%;}
@@ -364,45 +276,19 @@ div.main{margin-right:0px;}
 
 .g2 h1{font-size:51px;}
 }
-@media screen and (max-width:1245px){
-.tr1{font-size:19px;}
-.tr11{font-size:18.5px;}
-.tr12{font-size:19px;}
-.tr10{font-size:19px;}
-.yt3{font-size:19px;}
-.yt2{font-size:19px;}
-.tr14{font-size:19px;}
-.tr3{font-size:19px;}
-.view img{width:30%;}
-}
+
 @media screen and (max-width:1024px){
-.view img{width:35%;}
+
 .block4{font-size:34px;margin-right:13%;}
-.yt5{font-size:15px;padding-bottom:7%;}
-.yt4{font-size:15px;}
-.yt2{font-size:15px;padding-top:2%;}
-.yt3{font-size:15px;padding-bottom:8%;}
-.tqf1 img{height:170px;}
-.yt1{font-size:15px;}
+
+
+
 .m_v1024{display:none;}
 .m_v1280{display:none;}
 .glf3 img{width:14%;}
-.txx1{font-size:20px;}
-.fotk img{width:19px;}
-.tr14{font-size:15px;}
-.tqf2 img{height:41px;width:19px;}
-.tr13{font-size:15px;}
-.tr12{font-size:14.2px;}
-.tr11{font-size:14px;padding-bottom:6%;}
-.tr10{font-size:15px;}
-.tq1, .tq2, .tq3, .tq4{font-size:16px;}
-.tr5{font-size:15px;}
-.tr4{font-size:15px;padding-bottom:7%;}
-.tr9{font-size:16px;padding-bottom:6%;}
-.tr3{font-size:15px;}
-.tr2{font-size:14px;padding-bottom:7%;}
-.tr1{font-size:14.5px;padding-bottom:8%;padding-top:2%;}
-.tqf img{height:128px;}
+
+
+
 .kn{font-size:19px;}
 .kn4{padding-bottom:3%;}
 .kn3{padding-bottom:3%;}
@@ -429,8 +315,7 @@ div.main{margin-right:0px;}
 
 }
 @media screen and (max-width:800px){
-.view img{width:80%;}
-.vie{display:none;}
+
 .pp{display:none;}
 .googlem{text-align:center;}
 .wroe{flex-direction:column;}
@@ -460,48 +345,16 @@ div.main{margin-right:0px;}
 .osn7{background-image:url(./images/background/kn13.png);background-repeat:no-repeat;background-size:100%;font-size:19px;padding-left:6%;padding-bottom:9%;padding-right:2%;padding-top:2%;}
 .osn5{background-image:url(./images/background/kn10.png);background-repeat:no-repeat;background-size:100%;font-size:19px;padding-left:6%;padding-bottom:9%;padding-right:2%;padding-top:2%;}
 .osn6{background-image:url(./images/background/kn12.png);background-repeat:no-repeat;background-size:100%;font-size:19px;padding-left:6%;padding-bottom:9%;padding-right:2%;padding-top:2%;}
-.osn4 a{color:rgb(39, 43, 47);font-style:italic;}
-.osn4{width:100%;text-align:center;font-size:18px;font-family:akrobat-bold;}
-.osn3{width:100%;text-align:center;font-size:25px;color:rgb(255, 90, 90);font-family:akrobat-bold;line-height:23px;}
-.osn2 img{width:50%;}
-.osn2{width:100%;text-align:center;margin-top:7%;margin-bottom:-1%;}
-.osn1{color:rgb(255, 90, 90);width:100%;text-align:center;font-size:28px;font-family:akrobat-bold;line-height:31.5px;}
-.pred{width:100%;margin-top:-10%;}
-.pred1{width:10%;float:left;}
-.pred1 img{width:100%;height:386px;}
-.pred4{width:10%;float:left;}
-.pred4 img{width:100%;height:152px;}
-.pred3{width:10%;float:left;}
-.pred3 img{width:100%;height:594px;}
-.pred2{width:89%;float:left;margin-bottom:5%;}
-.osnov{display:block;font-family:akrobat-regular;color:rgb(39, 43, 47);font-size:22px;}
-.tq5, .tq6, .tq7, .tq70, .tq8, .tq9, .tq10, .tq11, .tq12, .tq13, .tq14, .tq40, .tq4{display:none;}
+
 .knfooter a{text-decoration:none;color:white;font-family:akrobat-bold;}
 .knf1{background-image:url(./images/background/kn.png);background-position:center;background-size:76%;background-repeat:no-repeat;padding-top:6%;padding-bottom:8%;width:100%;margin-bottom:2%;font-size:27px;}
 .knfooter{display:block;width:100%;text-align:center;font-size:21px;}
 .kn{display:none;}
-.vkic{font-size:10px;}
-.txx2{font-size:20px;}
-.txx1{font-size:14px;}
-.tqf1 img{width:12px;}
-.t0{font-size:22px;}
+
 .kn4{padding-bottom:3%;}
 .kn{font-size:10px;}
-.tqf2 img{height:44px;width:12px;}
-.tqf img{height:137px;width:14px;}
-.fotk img{width:22px;}
-.tr14{font-size:7px;}
-.tr13{font-size:7px;padding-bottom:6%;}
-.tr12{font-size:7px;padding-bottom:8%;}
-.tr11{font-size:7px;}
-.tr10{font-size:7px;padding-bottom:8%;}
-.tq1, .tq2, .tq3, .tq4{font-size:22px;padding-left:2%;margin-top:-4%;}
-.tr5{font-size:7px;}
-.tr4{font-size:7px;padding-bottom:9%;}
-.tr9{font-size:8px;}
-.tr3{font-size:7px;}
-.tr2{font-size:7px;}
-.tr1{font-size:8px;}
+
+
 
 .glf{display:none;}
 .glf9{display:none;}
@@ -579,41 +432,42 @@ div.main{margin-left:0;margin-right:0;}
 .osn6{background-image:url(./images/background/kn12-3.png);}
 .osn5{background-image:url(./images/background/kn12-2.png);}
 }
-@media screen and (max-width:360px){.tekst_vmob{display:block;}
+@media screen and (max-width:360px){
+.tekst_vmob{display:block;}
 .tekst_vpk{display:none;}
-.osn4{margin-bottom:2%;}
-.osn3{margin-bottom:2%;}
+
 .osn14{background-image:url(./images/background/kn16-2.png);padding-bottom:10%;}
 .osn15{background-image:url(./images/background/kn17-6.png);padding-bottom:10%;}
-.pred4 img{height:178px;}
+
 .osn17{background-image:url(./images/background/kn10-4.png);}
 .osn13{background-image:url(./images/background/kn10-3.png);padding-bottom:10%;}
 .osn12{background-image:url(./images/background/kn16-3.png);padding-bottom:8%;}
 .osn11{background-image:url(./images/background/kn17-5.png);}
-.pred3 img{height:724px;}
+
 .osn10{background-image:url(./images/background/kn10-5.png);padding-bottom:9%;}
 .osn9{background-image:url(./images/background/kn-18.png);}
 .osn7{background-image:url(./images/background/kn4-1.png);padding-bottom:8%;}
 .osn18{background-image:url(./images/background/kn10-2.png);}
 .osn6{background-image:url(./images/background/kn6-4.png);padding-bottom:8%;}
 .osn5{background-image:url(./images/background/kn10-1.png);}
-.pred1 img{height:464px;}
+
 }
-@media screen and (max-width:330px){.tekst_vmob{display:block;}
+@media screen and (max-width:330px){
+.tekst_vmob{display:block;}
 .tekst_vpk{display:none;}
 .osn18{background-image:url(./images/background/kn14-1.png);padding-bottom:13%;}
 .osn17{background-image:url(./images/background/kn14-1.png);padding-bottom:7%;}
 .osn14{background-image:url(./images/background/kn16-1.png);padding-bottom:5%;}
 .osn15{background-image:url(./images/background/kn17-3.png);padding-bottom:8%;}
-.pred4 img{height:178px;}
+
 .osn13{background-image:url(./images/background/kn16.png);padding-bottom:4%;}
 .osn12{background-image:url(./images/background/kn16-1.png);padding-bottom:5%;}
 .osn11{background-image:url(./images/background/kn17-2.png);padding-bottom:4%;}
-.pred3 img{height:802px;}
+
 .osn10{background-image:url(./images/background/kn6.png);padding-bottom:7%;}
 .osn9{background-image:url(./images/background/kn17-1.png);padding-bottom:4%;}
 .osn7{background-image:url(./images/background/kn4.png);padding-bottom:6%;}
 .osn6{background-image:url(./images/background/kn18-1.png);padding-bottom:4%;}
 .osn5{background-image:url(./images/background/kn14-1.png);padding-bottom:7%;}
-.pred1 img{height:542px;}
+
 }
