--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body{font-family:Tahoma, Arial, Helvetica, sans-serif;text-decoration:none;color
 .kn3{width:23%;float:left;background-image:url(./images/background/kn.png);background-repeat:no-repeat;background-size:100%;margin-right:2%;padding-top:1.5%;padding-bottom:2%;}
 .kn4{width:23%;float:left;background-image:url(./images/background/kn.png);background-repeat:no-repeat;background-size:100%;padding-top:1.5%;padding-bottom:3%;}
 .kn{text-align:center;margin-top:2%;width:100%;color:white;font-size:23px;font-family:akrobat-bold;}
-.tq1, .tq2, .tq3, .tq4{font-size:62,5%;color:rgb(39, 43, 47);}
+.tq1, .tq2, .tq3, .tq4{font-size:22px;color:rgb(39, 43, 47);}
 .tr5{line-height:140%;font-size:18px;padding-top:2%;padding-left:19%;padding-right:4%;padding-bottom:6%;margin-top:1%;}
 .tq9{width:100%;background-image:url(./images/background/tr2.png);background-repeat:no-repeat;background-size:100%;}
 .tr4{line-height:140%;font-size:18px;padding-left:6%;padding-right:23%;padding-bottom:6%;}
@@ -522,7 +522,7 @@ div.main{margin-right:0px;}
 .tr9{font-size:8px;}
 .tr3{font-size:7px;}
 .tr2{font-size:7px;}
-.tr1{font-size:8px;div.right1 p{
+.tr1{font-size:8px;div.right1 p{}
 font-size:25px;}
 div.right1 img{width:200px;}
 .glf{display:none;}
