--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ body{font-family:Tahoma, Arial, Helvetica, sans-serif;text-decoration:none;color
 .glf{width:100%;color:white;font-size:25px;font-family:akrobat-bold;padding-top:1.3%;}
 .glf1{width:17%;float:left;text-align:left;margin-left:2%;}
 .glf1 img{vertical-align:middle;width:15%;}
-.glf2{width:17%;float:left;text-align:left;margin-left:3%;margin-top:1.5%;}
+.glf2{width:17%;float:left;text-align:left;margin-left:3%;}
 .glf2 img{vertical-align:middle;width:15%;}
 .glf3{width:20%;float:left;text-align:left;margin-left:2%;margin-top:1.5%;}
 .glf3 img{vertical-align:middle;width:15%;}
