M-148. Transferred .img-service-rating style class from index.html to style-new.css, already referenced by all other pages.

--- a/style-new.css
+++ b/style-new.css
@@ -1,3 +1,8 @@
+.img-service-rating {
+    border-style: solid; 
+    border-color: rgb(255, 90, 90); 
+    border-width: 1px;
+}
 
 .menu_desktop {
     display:block;
