--- a/style.css
+++ b/style.css
@@ -110,8 +110,6 @@ body{font-family:Tahoma, Arial, Helvetica, sans-serif;text-decoration:none;color
 .tqf img{height:180px;width:29px;}
 .tqt{width:100%;}
 .tq1, .tq2, .tq3, .tqt, .tr1, .tq6, .tq7, .tq8, .tq9, .tq70, .tq10, .tq11, .tq12, .tq13, .tq14{font-family:akrobat-regular;color:rgb(39, 43, 47);}
-.glf9{display:none;}
-.glf0{display:none;}
 .glf a{color:white;}
 .glf a:hover{background:none;}
 .glf{width:100%;color:white;font-size:25px;font-family:akrobat-bold;padding-top:1.3%;}
@@ -361,14 +359,14 @@ a:hover{text-decoration:none;background-color:white;}
 .tr2{font-size:19px;padding-bottom:7%;}
 .tqf img{height:198px;}
 .tr5{font-size:19px;padding-right:6%;padding-top:3%;padding-bottom:7%;}
-.glf{display:none;}
 .glf1{width:19%;}
 .glf2{width:19%;}
 .glf3{width:24%;margin-left:5%;}
 .glf4{width:28%;margin-left:0%;}
-.glf9{display:block;width:100%;color:white;font-size:26px;font-family:akrobat-bold;padding-top:1.3%;}
-.glf9 a{color:white;}
-.glf9 a:hover{background:none;}
+.glf{display:block;width:100%;color:white;font-size:26px;font-family:akrobat-bold;padding-top:1.3%;}
+.glf a{color:white;}
+.glf a:hover{background:none;}
+.glf5{display:none;}
 div.main{margin-right:0px;}
 .righten{display:none;}
 .strek2 img{width:97%;}
@@ -426,11 +424,12 @@ div.main{margin-right:0px;}
 .kn3{padding-bottom:3%;}
 .kn2{padding-bottom:2%;}
 .kn1{padding-bottom:2%;}
-.glf9{display:block;width:100%;color:white;font-size:23px;font-family:akrobat-bold;padding-top:1.3%;}
-.glf9 a{color:white;}
-.glf9 a:hover{background:none;}
+.glf{display:block;width:100%;color:white;font-size:23px;font-family:akrobat-bold;padding-top:1.3%;}
+.glf a{color:white;}
+.glf a:hover{background:none;}
 .glf2{margin-left:4%;}
 .glf3{margin-left:3%;width:23%;}
+.glf5{display:none;}
 .righten{display:none;}
 .g2{width:74%;}
 .g1{width:26%;}
@@ -528,12 +527,10 @@ div.main{margin-right:0px;}
 .tr1{font-size:8px;}
 div.right1 p{font-size:25px;}
 div.right1 img{width:200px;}
-.glf{display:none;}
-.glf9{display:none;}
-.glf0{display:block;font-size:30px;}
-.glf0 a{color:white;}
-.glf0 a:hover{background:none;}
-.glf0{width:100%;color:white;font-size:25px;font-family:akrobat-bold;padding-top:1.3%;}
+.glf{display:block;font-size:30px;}
+.glf a{color:white;}
+.glf a:hover{background:none;}
+.glf{width:100%;color:white;font-size:25px;font-family:akrobat-bold;padding-top:1.3%;}
 .glf1{float:none;width:100%;margin-left:0%;text-align:center;margin-bottom:2%;}
 .glf1 img{width:8%;}
 .glf2{float:none;width:100%;text-align:center;margin-bottom:2%;margin-left:0%;}
@@ -542,6 +539,8 @@ div.right1 img{width:200px;}
 .glf3 img{width:8%;}
 .glf4{float:none;width:100%;text-align:center;margin-left:0%;}
 .glf4 img{width:7%;}
+.glf5{display:block;}
+.glf5{float:none;}
 .glf5{float:none;width:100%;text-align:center;margin-top:0%;}
 .glf5 img{width:80%;}
 .righten{display:none;}
