M-98. Removed duplicated properties of .glf

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ body{font-family:Tahoma, Arial, Helvetica, sans-serif;text-decoration:none;color
 .tq1, .tq2, .tq3, .tqt, .tr1, .tq6, .tq7, .tq8, .tq9, .tq70, .tq10, .tq11, .tq12, .tq13, .tq14{font-family:akrobat-regular;color:rgb(39, 43, 47);}
 .glf a{color:white;}
 .glf a:hover{background:none;}
+.glf{display:block;}
 .glf{width:100%;color:white;font-size:25px;font-family:akrobat-bold;padding-top:1.3%;}
 .glf1{width:17%;float:left;text-align:left;margin-left:2%;}
 .glf1 img{vertical-align:middle;width:15%;}
@@ -363,7 +364,7 @@ a:hover{text-decoration:none;background-color:white;}
 .glf2{width:19%;}
 .glf3{width:24%;margin-left:5%;}
 .glf4{width:28%;margin-left:0%;}
-.glf{display:block;width:100%;color:white;font-size:26px;font-family:akrobat-bold;padding-top:1.3%;}
+.glf{font-size:26px}
 .glf5{display:none;}
 div.main{margin-right:0px;}
 .righten{display:none;}
@@ -422,7 +423,7 @@ div.main{margin-right:0px;}
 .kn3{padding-bottom:3%;}
 .kn2{padding-bottom:2%;}
 .kn1{padding-bottom:2%;}
-.glf{display:block;width:100%;color:white;font-size:23px;font-family:akrobat-bold;padding-top:1.3%;}
+.glf{font-size:23px;}
 .glf2{margin-left:4%;}
 .glf3{margin-left:3%;width:23%;}
 .glf5{display:none;}
@@ -523,8 +524,8 @@ div.main{margin-right:0px;}
 .tr1{font-size:8px;}
 div.right1 p{font-size:25px;}
 div.right1 img{width:200px;}
-.glf{display:block;font-size:30px;}
-.glf{width:100%;color:white;font-size:25px;font-family:akrobat-bold;padding-top:1.3%;}
+.glf{font-size:30px;}
+.glf{font-size:25px;}
 .glf1{float:none;width:100%;margin-left:0%;text-align:center;margin-bottom:2%;}
 .glf1 img{width:8%;}
 .glf2{float:none;width:100%;text-align:center;margin-bottom:2%;margin-left:0%;}
