--- a/style.css
+++ b/style.css
@@ -536,7 +536,7 @@ div.right1 img{width:200px;}
 .glf4 img{width:7%;}
 .glf5{display:block;}
 .glf5{float:none;}
-.glf5{float:none;width:100%;text-align:center;margin-top:0%;}
+.glf5{width:100%;text-align:center;margin-top:0%;}
 .glf5 img{width:80%;}
 .righten{display:none;}
 .otz01{display:none;}
