--- a/style.css
+++ b/style.css
@@ -114,15 +114,18 @@ body{font-family:Tahoma, Arial, Helvetica, sans-serif;text-decoration:none;color
 .glf a:hover{background:none;}
 .glf{display:block;}
 .glf{width:100%;color:white;font-size:25px;font-family:akrobat-bold;padding-top:1.3%;}
-.glf1{width:17%;float:left;text-align:left;margin-left:2%;}
-.glf1 img{vertical-align:middle;width:15%;}
-.glf2{width:17%;float:left;text-align:left;margin-left:3%;}
-.glf2 img{vertical-align:middle;width:15%;}
-.glf3{width:20%;float:left;text-align:left;margin-left:2%;margin-top:1.5%;}
-.glf3 img{vertical-align:middle;width:15%;}
-.glf4{width:25%;float:left;text-align:left;margin-left:2%;margin-top:1.5%;}
-.glf4 img{vertical-align:middle;width:8%;}
-.glf5{width:19%;float:left;margin-left:-7%;}
+.glf1 img, .glf2 img, .glf3 img, .glf4 img{
+	width:50px;
+}
+.glf1{width:18%;float:left;text-align:left;margin-left:1%;}
+.glf1 img{vertical-align:middle;}
+.glf2{width:18%;float:left;text-align:left;margin-left:1%;}
+.glf2 img{vertical-align:middle;}
+.glf3{width:15%;float:left;text-align:left;margin-left:1%;}
+.glf3 img{vertical-align:middle;}
+.glf4{width:30%;float:left;text-align:left;margin-left:1%;}
+.glf4 img{vertical-align:middle;}
+.glf5{width:18%;float:left;margin-left:-7%;}
 .glf5 img{width:91%;}
 .n1{width:200px;}
 .n1 img{width:100%;}
@@ -361,8 +364,11 @@ a:hover{text-decoration:none;background-color:white;}
 .tr5{font-size:19px;padding-right:6%;padding-top:3%;padding-bottom:7%;}
 .glf1{width:19%;}
 .glf2{width:19%;}
-.glf3{width:24%;margin-left:5%;}
-.glf4{width:28%;margin-left:0%;}
+.glf3{width:15%;margin-left:5%;}
+.glf4{width:30%;margin-left:0%;}
+.glf1 img, .glf2 img, .glf3 img, .glf4 img{
+	width:25px;
+}
 .glf{font-size:23px}
 .glf5{display:none;}
 div.main{margin-right:0px;}
@@ -400,7 +406,9 @@ div.main{margin-right:0px;}
 .yt1{font-size:15px;}
 .m_v1024{display:none;}
 .m_v1280{display:none;}
-.glf3 img{width:14%;}
+.glf1 img, .glf2 img, .glf3 img, .glf4 img{
+	width:25px;
+}
 .txx1{font-size:20px;}
 .fotk img{width:19px;}
 .tr14{font-size:15px;}
@@ -531,7 +539,7 @@ div.right1 img{width:200px;}
 .glf3{float:none;width:100%;text-align:center;margin-left:0%;margin-bottom:2%;}
 .glf3 img{width:8%;}
 .glf4{float:none;width:100%;text-align:center;margin-left:0%;margin-bottom:2%;}
-.glf4 img{width:7%;}
+.glf4 img{width:8%;}
 .glf5{display:block;}
 .glf5{float:none;}
 .glf5{width:100%;text-align:center;margin-top:0%;}
