--- a/style.css
+++ b/style.css
@@ -110,20 +110,22 @@ body{font-family:Tahoma, Arial, Helvetica, sans-serif;text-decoration:none;color
 .tqf img{height:180px;width:29px;}
 .tqt{width:100%;}
 .tq1, .tq2, .tq3, .tqt, .tr1, .tq6, .tq7, .tq8, .tq9, .tq70, .tq10, .tq11, .tq12, .tq13, .tq14{font-family:akrobat-regular;color:rgb(39, 43, 47);}
-.glf9{display:none;}
-.glf0{display:none;}
 .glf a{color:white;}
 .glf a:hover{background:none;}
+.glf{display:block;}
 .glf{width:100%;color:white;font-size:25px;font-family:akrobat-bold;padding-top:1.3%;}
-.glf1{width:17%;float:left;text-align:left;margin-left:2%;}
-.glf1 img{vertical-align:middle;width:15%;}
-.glf2{width:17%;float:left;text-align:left;margin-left:3%;}
-.glf2 img{vertical-align:middle;width:15%;}
-.glf3{width:20%;float:left;text-align:left;margin-left:2%;margin-top:1.5%;}
-.glf3 img{vertical-align:middle;width:15%;}
-.glf4{width:25%;float:left;text-align:left;margin-top:1.5%;margin-left:2%;}
-.glf4 img{vertical-align:middle;width:8%;}
-.glf5{width:19%;float:left;margin-left:-7%;}
+.glf1 img, .glf2 img, .glf3 img, .glf4 img{
+	width:50px;
+}
+.glf1{width:18%;float:left;text-align:left;margin-left:1%;}
+.glf1 img{vertical-align:middle;}
+.glf2{width:18%;float:left;text-align:left;margin-left:1%;}
+.glf2 img{vertical-align:middle;}
+.glf3{width:15%;float:left;text-align:left;margin-left:1%;}
+.glf3 img{vertical-align:middle;}
+.glf4{width:30%;float:left;text-align:left;margin-left:1%;}
+.glf4 img{vertical-align:middle;}
+.glf5{width:18%;float:left;margin-left:-7%;}
 .glf5 img{width:91%;}
 .n1{width:200px;}
 .n1 img{width:100%;}
@@ -220,7 +222,6 @@ td.topfon{height:30px;vertical-align:bottom;}
 td.fon{width:250px;}
 p{font-family:Tahoma, Arial, Helvetica, sans-serif;font-size:12px;text-decoration:none;color:#000000;}
 p.main, h3.main, ul.main{font-size:medium;text-align:justify;}
-.imaged_entry{}
 p.image{max-width:1200px;max-width:100%;text-align:justify;}
 .description_image{float:left;width:128px;}
 .image{max-width:100%;text-align:center;}
@@ -361,14 +362,15 @@ a:hover{text-decoration:none;background-color:white;}
 .tr2{font-size:19px;padding-bottom:7%;}
 .tqf img{height:198px;}
 .tr5{font-size:19px;padding-right:6%;padding-top:3%;padding-bottom:7%;}
-.glf{display:none;}
 .glf1{width:19%;}
 .glf2{width:19%;}
-.glf3{width:24%;margin-left:5%;}
-.glf4{width:28%;margin-left:0%;}
-.glf9{display:block;width:100%;color:white;font-size:26px;font-family:akrobat-bold;padding-top:1.3%;}
-.glf9 a{color:white;}
-.glf9 a:hover{background:none;}
+.glf3{width:15%;margin-left:5%;}
+.glf4{width:30%;margin-left:0%;}
+.glf1 img, .glf2 img, .glf3 img, .glf4 img{
+	width:25px;
+}
+.glf{font-size:23px}
+.glf5{display:none;}
 div.main{margin-right:0px;}
 .righten{display:none;}
 .strek2 img{width:97%;}
@@ -404,7 +406,9 @@ div.main{margin-right:0px;}
 .yt1{font-size:15px;}
 .m_v1024{display:none;}
 .m_v1280{display:none;}
-.glf3 img{width:14%;}
+.glf1 img, .glf2 img, .glf3 img, .glf4 img{
+	width:25px;
+}
 .txx1{font-size:20px;}
 .fotk img{width:19px;}
 .tr14{font-size:15px;}
@@ -426,11 +430,10 @@ div.main{margin-right:0px;}
 .kn3{padding-bottom:3%;}
 .kn2{padding-bottom:2%;}
 .kn1{padding-bottom:2%;}
-.glf9{display:block;width:100%;color:white;font-size:23px;font-family:akrobat-bold;padding-top:1.3%;}
-.glf9 a{color:white;}
-.glf9 a:hover{background:none;}
+.glf{font-size:17px;}
 .glf2{margin-left:4%;}
 .glf3{margin-left:3%;width:23%;}
+.glf5{display:none;}
 .righten{display:none;}
 .g2{width:74%;}
 .g1{width:26%;}
@@ -528,21 +531,18 @@ div.main{margin-right:0px;}
 .tr1{font-size:8px;}
 div.right1 p{font-size:25px;}
 div.right1 img{width:200px;}
-.glf{display:none;}
-.glf9{display:none;}
-.glf0{display:block;font-size:30px;}
-.glf0 a{color:white;}
-.glf0 a:hover{background:none;}
-.glf0{width:100%;color:white;font-size:25px;font-family:akrobat-bold;padding-top:1.3%;}
-.glf1{float:none;width:100%;margin-left:0%;text-align:center;margin-bottom:2%;}
+.glf{font-size:30px;}
+.glf1{float:none;width:100%;text-align:center;margin-left:0%;margin-bottom:2%;}
 .glf1 img{width:8%;}
-.glf2{float:none;width:100%;text-align:center;margin-bottom:2%;margin-left:0%;}
+.glf2{float:none;width:100%;text-align:center;margin-left:0%;margin-bottom:2%;}
 .glf2 img{width:8%;}
 .glf3{float:none;width:100%;text-align:center;margin-left:0%;margin-bottom:2%;}
 .glf3 img{width:8%;}
-.glf4{float:none;width:100%;text-align:center;margin-left:0%;}
-.glf4 img{width:7%;}
-.glf5{float:none;width:100%;text-align:center;margin-top:0%;}
+.glf4{float:none;width:100%;text-align:center;margin-left:0%;margin-bottom:2%;}
+.glf4 img{width:8%;}
+.glf5{display:block;}
+.glf5{float:none;}
+.glf5{width:100%;text-align:center;margin-top:0%;}
 .glf5 img{width:80%;}
 .righten{display:none;}
 .otz01{display:none;}
