--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body{font-family:Tahoma, Arial, Helvetica, sans-serif;text-decoration:none;color
 .ot4{font-size:16px;font-family:akrobat-regular;color:rgb(39, 43, 47);}
 .ot4 a{text-decoration:none;}
 .ot3{margin-bottom:5px;}
-.ot3 em{font-size:12px;font-family:akrobat-regular;color:rgb(39, 43, 47);}
+.ot3 .former-em{font-size:12px;font-family:akrobat-regular;color:rgb(39, 43, 47);}
 .ot2 a{color:rgb(255, 90, 90);font-family:akrobat-bold;font-size:25px;}
 .ot1 img{width:80%;}
 .otz0{font-family:akrobat-black;color:rgb(255, 90, 90);font-size:25px;}
@@ -215,7 +215,7 @@ h10{ text-align:center;}
 h2{ text-align:center;}
 h1.main, h10.main{font-size:120%;text-align:center;}
 h2.main{font-size:140%;text-align:center;}
-h1, h10, h2.main, h3.main, h3, strong, em{color:dimgray;}
+h1, h10, h2.main, h3.main, h3, strong, .former-em{color:dimgray;}
 td{padding:0%;}
 td.logo{width:250px;height:143px;}
 td.topfon{height:30px;vertical-align:bottom;}
@@ -311,7 +311,7 @@ a:hover{text-decoration:none;background-color:white;}
 .glf4{margin-left:3%;}
 .tt1{font-size:28px;}
 .tt2{font-size:28px;}
-.ot3 em{font-size:16px;}
+.ot3 .former-em{font-size:16px;}
 .title{font-size:34px;}
 .strek0{margin-top:12%;}
 .strek2 img{width:115%;margin-right:-126%;}
