--- a/style.css
+++ b/style.css
@@ -2,6 +2,16 @@
 @font-face{font-family:akrobat-black;src:url(./fonts/Akrobat-Black.otf);}
 @font-face{font-family:akrobat-regular;src:url(./fonts/Akrobat-Regular.otf);}
 body{font-family:Tahoma, Arial, Helvetica, sans-serif;text-decoration:none;color:#000000;background-color:#ffffff;text-decoration-color:#000000;margin-top:0%;margin-bottom:0%;margin-left:0%;margin-right:0%;overflow-x:hidden;}
+/* вместо .zg */
+strong {
+    font-family:akrobat-bold;
+    color:rgb(255, 90, 90);
+    font-size:25px;
+}
+/* вместо .roztx */
+em {
+    color:rgb(255, 90, 90);
+}
 .view a{color:rgb(39, 43, 47);text-decoration:none;}
 .view{text-align:center;font-family:akrobat-regular;color:rgb(39, 43, 47);font-size:32px;}
 .view img{
