--- a/style.css
+++ b/style.css
@@ -148,7 +148,10 @@ em {
 .ot4{font-size:16px;font-family:akrobat-regular;color:rgb(39, 43, 47);}
 .ot4 a{text-decoration:none;}
 .ot3{margin-bottom:5px;}
-.ot3 .former-em{font-style: italic;font-size:12px;font-family:akrobat-regular;color:rgb(39, 43, 47);}
+.former-em {
+    font-style: italic;
+}
+.ot3 .former-em{font-size:12px;font-family:akrobat-regular;color:rgb(39, 43, 47);}
 .ot2 a{color:rgb(255, 90, 90);font-family:akrobat-bold;font-size:25px;}
 .ot1 img{width:80%;}
 .otz0{font-family:akrobat-black;color:rgb(255, 90, 90);font-size:25px;}
