М-57. 8) Исправление для строки "Отдельно выделю следующие направления"

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ h10{ text-align:center;}
 h2{ text-align:center;}
 h1.main, h10.main{font-size:120%;text-align:center;}
 h2.main{font-size:140%;text-align:center;}
-h1, h10, h2.main, h3.main, h3, strong, .former-em{color:dimgray;}
+h1, h10, h2.main, h3.main, h3, strong, ot3 .former-em{color:dimgray;}
 td{padding:0%;}
 td.logo{width:250px;height:143px;}
 td.topfon{height:30px;vertical-align:bottom;}
