М-57. 14) Size of strong changed from 23 (that smaller than usual text of 28) to 30 at wide (1800 and more) screens.

--- a/style.css
+++ b/style.css
@@ -338,6 +338,7 @@ a:hover{text-decoration:none;background-color:white;}
 .op1{font-size:36px;}
 .h21{font-size:34px;}
 .zgt{font-size:28px;}
+strong {font-size:30px;}
 .bl3t{font-size:28px;}
 .bl2{font-size:27px;}
 .bl3{font-size:27px;}
