--- a/style-new.css
+++ b/style-new.css
@@ -1,3 +1,15 @@
+a {
+    color: rgb(140, 140, 140);
+}
+
+h2, h3, h4 {
+    color: rgb(255, 90, 90);
+}
+
+#realmain {
+    padding: 15px;
+}
+
 .img-service-rating {
     border-style: solid; 
     border-color: rgb(255, 90, 90); 
